# python-mpy-cross

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: publish.yml
src/mpy_cross_v5/: __init__.py  __main__.py
src/mpy_cross_v6/: __init__.py
src/mpy_cross_v6_1/: __init__.py
tests/: test_mpy_cross.py
